<resources>
    <string name="app_name">失物寻回</string>


    <!--Loading-->
    <string name="load_msg">正在加载中&#8230;</string>
    <string name="load_update">正在修改中&#8230;</string>
    <string name="load_delete">正在删除中&#8230;</string>
    <string name="load_send_code">正在发送验证码&#8230;</string>
    <string name="load_verify">正在验证中&#8230;</string>
    <string name="load_switch">正在切换中&#8230;</string>
    <string name="load_login">正在登录中&#8230;</string>
    <string name="load_sign">正在注册中&#8230;</string>
    <string name="text_content">内容内容内容内容内容内容内容内容
    内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容
    内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容
    </string>
    <string name="record_lost">丢失记录</string>
    <string name="record_find">拾物记录</string>
    <string name="record_complete">完成记录</string>
    <string name="record_mine">我的记录</string>

    <string-array name="record_list_name">
        <item>丢失记录</item>
        <item>拾物记录 </item>
        <item>完成记录</item>
        <item>全部记录</item>
    </string-array>

    <!--    个人信息-->
    <string name="personal_avatar">头像</string>
    <string name="personal_nickname">昵称</string>
    <string name="personal_userid">用户ID</string>
    <string name="personal_gender">性别</string>
    <string name="personal_area">地区</string>
    <string name="personal_email">邮箱</string>
    <string name="personal_helptiems">帮助次数</string>

    <string name="set_password_text">请修改账号密码，密码必须是8-16位的数字、字符组合（不能是纯数字）</string>
    <string name="string_search">搜索地址，内容....</string>


</resources>
