<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll_avatar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_avatar"
            android:layout_marginLeft="5dp"
            android:textColor="@color/grey_515151"
            android:textSize="16sp"
            android:layout_gravity="center"
            />
        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <com.example.habin.lostpropertyproject.Widget.CircleImageView
            android:id="@+id/civ_avatar"
            android:layout_gravity="center"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:src="@drawable/ttt"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:src="@mipmap/ic_right_grey51" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:background="@color/white_eb" />
    <LinearLayout
        android:id="@+id/ll_nickname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_nickname"
            android:layout_marginLeft="5dp"
            android:textColor="@color/grey_515151"
            android:textSize="16sp"
            android:layout_gravity="center"
            />
        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="昵称"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/gray_999"
            android:textSize="16sp"
            android:layout_gravity="center"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:src="@mipmap/ic_right_grey51" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:background="@color/white_eb" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_userid"
            android:layout_marginLeft="5dp"
            android:textColor="@color/grey_515151"
            android:textSize="16sp"
            android:layout_gravity="center"
            />
        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/tv_userid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="156816"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/gray_999"
            android:textSize="16sp"
            android:layout_gravity="center"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:background="@color/white_eb" />

    <LinearLayout
        android:id="@+id/ll_gender"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_gender"
            android:layout_marginLeft="5dp"
            android:textColor="@color/grey_515151"
            android:textSize="16sp"
            android:layout_gravity="center"
            />
        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="男"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/gray_999"
            android:textSize="16sp"
            android:layout_gravity="center"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:src="@mipmap/ic_right_grey51" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:background="@color/white_eb" />

    <LinearLayout
        android:id="@+id/ll_area"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_area"
            android:layout_marginLeft="5dp"
            android:textColor="@color/grey_515151"
            android:textSize="16sp"
            android:layout_gravity="center"
            />
        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/tv_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="广东佛山"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/gray_999"
            android:textSize="16sp"
            android:layout_gravity="center"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:src="@mipmap/ic_right_grey51" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:background="@color/white_eb" />

    <LinearLayout
        android:id="@+id/ll_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_email"
            android:layout_marginLeft="5dp"
            android:textColor="@color/grey_515151"
            android:textSize="16sp"
            android:layout_gravity="center"
            />
        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="123456@qq.com"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/gray_999"
            android:textSize="16sp"
            android:layout_gravity="center"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:src="@mipmap/ic_right_grey51" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:background="@color/white_eb" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_helptiems"
            android:layout_marginLeft="5dp"
            android:textColor="@color/grey_515151"
            android:textSize="16sp"
            android:layout_gravity="center"
            />
        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/tv_helptimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1次"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/gray_999"
            android:textSize="16sp"
            android:layout_gravity="center"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:background="@color/white_eb" />
</LinearLayout>